# mpc-protocols

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  MUL_PERF_REPORT.md  README.md  TURMOIL_CONNECT_HANG_REPORT.md  }
.claude/agents/: test-lint-enforcer.md
.github/workflows/: ci.yml  release.yml
common/: Cargo.toml
common/src/: lib.rs
common/src/batch_recon/: batch_recon.rs
common/src/rbc/: mod.rs  rbc.rs  utils.rs
common/src/share/: mod.rs  shamir.rs
common/tests/: rbc_test.rs
mpc/: Cargo.toml
mpc/benches/: avss_mpc_bench.rs  bench_utils.rs  fpdiv_const_bench.rs  hmpc_batch_recon_bench.rs  hmpc_batchrecon_ab_bench.rs  hmpc_fpdiv_const_bench.rs  hmpc_fpmul_bench.rs  hmpc_mul_bench.rs  hmpc_mul_e2e_bench.rs  hmpc_mul_micro_bench.rs  hmpc_preprocessing_bench.rs  lagrange_benchmark.rs
mpc/src/: lib.rs
mpc/src/adkg/: mod.rs
mpc/src/adkg/share_gen/: mod.rs  share_gen_avss.rs
mpc/src/adkg/triple_gen/: mod.rs  triple_gen.rs
mpc/src/avss_mpc/: mod.rs
mpc/src/avss_mpc/input/: input.rs  mod.rs
mpc/src/avss_mpc/mul/: mod.rs  multiplication.rs
mpc/src/avss_mpc/output/: mod.rs  output.rs
mpc/src/avss_mpc/share_gen/: mod.rs  share_gen_avss.rs
mpc/src/avss_mpc/triple_gen/: mod.rs  triple_gen.rs
mpc/src/common/: batch_ops.rs  batch_recon.rs  mod.rs  reed_solomon.rs  robust_interpolate.rs  session_store.rs  utils.rs
mpc/src/common/acss/: mod.rs  pedersen.rs
mpc/src/common/math/: goldilocks.rs  mod.rs
mpc/src/common/rbc/: mod.rs  rbc.rs  rbc_store.rs  shares.rs  utils.rs
mpc/src/common/share/: avss.rs  feldman.rs  mod.rs  shamir.rs
mpc/src/common/types/: f256.rs  fixed.rs  integer.rs  mod.rs  prandbitd.rs
mpc/src/ffi/: README.md  honey_badger_bindings.h  network_test  share_test
mpc/src/ffi/c_bindings/: cbindgen.toml  mod.rs
mpc/src/ffi/c_bindings/honey_badger_mpc_client/: mod.rs
mpc/src/ffi/c_bindings/network/: fake_network.rs  mod.rs  quic.rs
mpc/src/ffi/c_bindings/rbc/: mod.rs
mpc/src/ffi/c_bindings/share/: mod.rs
mpc/src/ffi/tests/: network_test.c  rbc_test.c  secret_share.c
mpc/src/honeybadger/: benchmark.rs  double_share_generation.rs  messages.rs  mod.rs  multiplication.rs  preprocessing.rs  robust_interpolate.rs  triple_generation.rs
mpc/src/honeybadger/batch_recon/: batch_recon.rs  mod.rs
mpc/src/honeybadger/comparison/: bit_ltc1.rs  eqz.rs  kor_cl.rs  kor_cs.rs  ltz.rs  mod.rs  mod2.rs  mod2m.rs  pre_mulc.rs  rand_inv_pair.rs  trunc.rs
mpc/src/honeybadger/double_share/: double_share_generation.rs  mod.rs
mpc/src/honeybadger/double_share_generation/: mod.rs
mpc/src/honeybadger/fpdiv/: fpdiv_const.rs  mod.rs
mpc/src/honeybadger/fpmul/: f256.rs  fpmul.rs  gf_256.rs  mod.rs  prandbitd.rs  rand_bit.rs  truncpr.rs
mpc/src/honeybadger/input/: input.rs  mod.rs
mpc/src/honeybadger/mul/: mod.rs  multiplication.rs
mpc/src/honeybadger/mul_pub/: mod.rs  mul_pub.rs
mpc/src/honeybadger/output/: mod.rs  output.rs
mpc/src/honeybadger/ran_dou_sha/: batched_ran_dou_sha.rs  messages.rs  mod.rs
mpc/src/honeybadger/rand_bit/: mod.rs
mpc/src/honeybadger/robust_interpolate/: mod.rs  robust_interpolate.rs
mpc/src/honeybadger/share_gen/: batched_share_gen.rs  mod.rs  share_gen.rs  share_gen_avss.rs
mpc/src/honeybadger/triple_gen/: batched_triple_generation.rs  mod.rs  triple_generation.rs
mpc/src/honeybadger/zero_share/: mod.rs  zero_share.rs
mpc/src/ran_dou_sha/: messages.rs  mod.rs
mpc/tests/: adkg_test.rs  avss_input_test.rs  avss_mpc_test.rs  avss_output_test.rs  avss_test.rs  avss_turmoil_test.rs  batchrecon_test.rs  comparison_test.rs  concurrency_tests.rs  double_share_tests.rs  e2e_test.rs  eqz_test.rs  fpmul_test.rs  fpmul_tests.rs  input_test.rs  large_scale_perf_test.rs  large_scale_preprocessing_test.rs  ltz_test.rs  mul_bench_turmoil.rs  mul_pub_test.rs  mul_test.rs  network_divergence_test.rs  node_comparison_test.rs  node_test.rs  prandbit_test.rs  prandbitd_test.rs  race_condition_tests.rs  rand_bit_test.rs  randousha_test.rs  ransha_test.rs  rbc_test.rs  sessionended_race_test.rs  timeout_sensitivity_test.rs  triple_gen_test.rs  truncpr_test.rs  turmoil_test.rs  zero_share_test.rs
mpc/tests/utils/: comparison_utils.rs  double_share_utils.rs  fpmul_utils.rs  mod.rs  prandbitd_utils.rs  rand_bit_utils.rs  test_utils.rs  triple_gen_utils.rs  truncpr_utils.rs  turmoil.rs
network/: Cargo.toml
network/src/: bad_fake_network.rs  fake_network.rs  lib.rs  peer_connection.rs  turmoil_network.rs
src/: common_shares.rs  lib.rs
src/common/: bracha.rs  mod.rs  rbc.rs  rbc_store.rs  shares.rs  types.rs  utils.rs
tests/: rbc_test.rs
