[workspace]
members = [
    "mpc", "network",    
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
ark-ff = { version = "0.5.0", features = [ "asm" ] }
ark-poly = "0.5.0"
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reed-solomon-erasure = "6.0.0"
rs_merkle = "1.5.0"
sha2 = "0.10.8"
async-trait = "0.1.88"
threshold_crypto = "0.4.0"
rand = "0.7.3"
serde = "1.0.219"
bincode = "1.3"
ark-std = "0.5.0"
ark-bls12-381 = "0.5.0"
thiserror = "2.0.12"
ark-serialize = { version = "0.5", features = ["derive"] }
