[workspace]
members = [
    "mpc", "network",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Stoffel-Labs/mpc-protocols"
homepage = "https://stoffelmpc.com"
readme = "README.md"

[workspace.dependencies]
stoffelnet = "0.1.0"
ark-ff = { version = "0.5.0", features = [ "asm" ] }
ark-poly = "0.5.0"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt"]}
reed-solomon-erasure = "6.0.0"
rs_merkle = "1.5.0"
sha2 = "0.10.8"
async-trait = "0.1.88"
threshold_crypto = "0.4.0"
rand = "0.7.3"
serde = "1.0.219"
bincode = "1.3"
ark-std = { version = "0.5.0", features = ["getrandom"] }
ark-bls12-381 = "0.5.0"
ark-bn254 = "0.5.0"
thiserror = "2.0.12"
ark-serialize = { version = "0.5", features = ["derive"] }
futures = "0.3.31"
itertools = "0.14.0"
rustls = "0.23"
num-bigint = { version = "0.4", features = ["rand", "serde"] }
num-traits = "0.2"
uuid = { version = "1.18.1", features = ["v4", "v5", "serde"] }
ark-ec = "0.5.0"
chacha20poly1305 = "0.10.1"
turmoil = "0.7.1"
criterion = { version = "0.5", features = ["async_tokio"] }
num-integer = "0.1.46"
once_cell = "1.21.3"
# Pin transitive `time` to avoid 0.3.48, which triggers an E0119 coherence
# conflict in rcgen 0.14.x. Remove once a fixed time >=0.3.49 is released.
time = "=0.3.47"
