[package]
name = "stoffelmpc-mpc"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
tracing-subscriber.workspace = true
stoffelmpc-network = { path = "../network/" }
ark-ff.workspace = true
serde.workspace = true
ark-serialize.workspace = true
tokio.workspace = true
tracing.workspace = true
ark-poly.workspace = true
ark-std.workspace = true
ark-bls12-381.workspace = true
ark-bn254.workspace = true
bincode.workspace = true
threshold_crypto.workspace = true
async-trait.workspace = true
sha2.workspace = true
rs_merkle.workspace = true
reed-solomon-erasure.workspace = true
rand.workspace = true
futures.workspace = true
itertools.workspace = true
stoffelnet.workspace = true
rustls.workspace = true
num-bigint.workspace = true
uuid.workspace = true
ark-ec.workspace = true
chacha20poly1305.workspace = true
num-integer.workspace = true
turmoil.workspace = true
num-traits.workspace = true

[dev-dependencies]
once_cell.workspace = true
criterion = { workspace = true }
turmoil = { workspace = true }


[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[[bench]]
name = "hmpc_mul_bench"
harness = false

[[bench]]
name = "hmpc_preprocessing_bench"
harness = false

[[bench]]
name = "hmpc_fpmul_bench"
harness = false

[[bench]]
name = "hmpc_fpdiv_const_bench"
harness = false

[[bench]]
name = "avss_mpc_bench"
harness = false

[[bench]]
name = "hmpc_batch_recon_bench"
harness = false

[[bench]]
name = "hmpc_mul_micro_bench"
harness = false

[[bench]]
name = "hmpc_mul_e2e_bench"
harness = false

[[bench]]
name = "hmpc_batchrecon_ab_bench"
harness = false
