[package]
name = "stoffelcrypto"
version.workspace = true
edition.workspace = true
description = "Asynchronous HoneyBadgerMPC protocols, preprocessing, and arithmetic for Stoffel."
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/stoffelcrypto"
readme.workspace = true
keywords = ["async", "crypto", "cryptography", "mpc", "secret-sharing"]
categories = ["cryptography"]

[dependencies]
thiserror.workspace = true
tracing-subscriber.workspace = true
stoffelmpc-network = { path = "../network/", version = "0.1.0" }
ark-ff.workspace = true
serde.workspace = true
ark-serialize.workspace = true
tokio.workspace = true
tracing.workspace = true
ark-poly.workspace = true
ark-std.workspace = true
ark-bls12-381.workspace = true
ark-bn254.workspace = true
bincode.workspace = true
threshold_crypto.workspace = true
async-trait.workspace = true
sha2.workspace = true
rs_merkle.workspace = true
reed-solomon-erasure.workspace = true
rand.workspace = true
futures.workspace = true
itertools.workspace = true
stoffelnet.workspace = true
rustls.workspace = true
num-bigint.workspace = true
uuid.workspace = true
ark-ec.workspace = true
chacha20poly1305.workspace = true
num-integer.workspace = true
turmoil.workspace = true
num-traits.workspace = true

[dev-dependencies]
once_cell.workspace = true
criterion = { workspace = true }
turmoil = { workspace = true }


[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[lints.clippy]
assign_op_pattern = "allow"
bind_instead_of_map = "allow"
blocks_in_conditions = "allow"
borrow_deref_ref = "allow"
clone_on_copy = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
comparison_chain = "allow"
doc_lazy_continuation = "allow"
doc_overindented_list_items = "allow"
empty_line_after_doc_comments = "allow"
expect_fun_call = "allow"
extra_unused_type_parameters = "allow"
field_reassign_with_default = "allow"
for_kv_map = "allow"
from_over_into = "allow"
get_first = "allow"
int_plus_one = "allow"
iter_cloned_collect = "allow"
iter_kv_map = "allow"
iter_nth_zero = "allow"
legacy_numeric_constants = "allow"
len_zero = "allow"
let_and_return = "allow"
let_unit_value = "allow"
manual_async_fn = "allow"
manual_clamp = "allow"
manual_contains = "allow"
manual_div_ceil = "allow"
manual_is_multiple_of = "allow"
manual_map = "allow"
manual_repeat_n = "allow"
manual_unwrap_or_default = "allow"
map_entry = "allow"
match_like_matches_macro = "allow"
missing_safety_doc = "allow"
module_inception = "allow"
needless_borrow = "allow"
needless_borrows_for_generic_args = "allow"
needless_late_init = "allow"
needless_lifetimes = "allow"
needless_range_loop = "allow"
needless_return = "allow"
nonminimal_bool = "allow"
not_unsafe_ptr_arg_deref = "allow"
only_used_in_recursion = "allow"
op_ref = "allow"
option_map_unit_fn = "allow"
or_fun_call = "allow"
ptr_arg = "allow"
redundant_closure = "allow"
redundant_closure_call = "allow"
redundant_field_names = "allow"
repeat_vec_with_capacity = "allow"
result_unit_err = "allow"
should_implement_trait = "allow"
single_char_pattern = "allow"
single_match = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
uninlined_format_args = "allow"
unnecessary_cast = "allow"
unnecessary_lazy_evaluations = "allow"
unused_enumerate_index = "allow"
unwrap_or_default = "allow"
useless_conversion = "allow"
useless_vec = "allow"
while_let_loop = "allow"

[[bench]]
name = "hmpc_mul_bench"
harness = false

[[bench]]
name = "hmpc_preprocessing_bench"
harness = false

[[bench]]
name = "hmpc_fpmul_bench"
harness = false

[[bench]]
name = "hmpc_fpdiv_const_bench"
harness = false

[[bench]]
name = "avss_mpc_bench"
harness = false

[[bench]]
name = "hmpc_batch_recon_bench"
harness = false

[[bench]]
name = "hmpc_mul_micro_bench"
harness = false

[[bench]]
name = "hmpc_mul_e2e_bench"
harness = false

[[bench]]
name = "hmpc_batchrecon_ab_bench"
harness = false
