[package]
name = "stoffelmpc-network"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
ark-serialize.workspace = true
ark-ff.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

[dev-dependencies]
ark-bls12-381.workspace = true